k8s/infrastructure/0-0-k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exalt-bank-account-app-ns
  labels:
    app: exalt-bank-account-app-ns
