k8s/infrastructure/3-0-k8s-kafka-infra-zookeeper.yaml
#zookeeper
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-server
  labels:
    app: zookeeper-server
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zookeeper-server
  template:
    metadata:
      name: zookeeper-server
      labels:
        app: zookeeper-server
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: zookeeper-server
          image: zookeeper:3.4.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
              protocol: TCP
              name: zookeeper-port
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-server
  labels:
    app: zookeeper-server
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: zookeeper-server
  ports:
    - port: 2181
      protocol: TCP
      targetPort: zookeeper-port
      name: zookeeper-port-svc
  type: ClusterIP
