k8s/infrastructure/3-1-k8s-kafka-infra-broker-1.yaml
# kafka servers
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-server1
  labels:
    app: kafka-server1
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-server1
  template:
    metadata:
      name: kafka-server1
      labels:
        app: kafka-server1
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: kafka-server1
          image: obsidiandynamics/kafka
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              protocol: TCP
              name: kafka-port1
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-server1
  labels:
    app: kafka-server1
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: kafka-server1
  ports:
    - port: 9092
      protocol: TCP
      targetPort: kafka-port1
      name: kafka-port1-svc
  type: ClusterIP
