k8s/infrastructure/3-1-k8s-kafka-infra-broker-2.yaml
# kafka servers
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-server2
  labels:
    app: kafka-server2
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-server2
  template:
    metadata:
      name: kafka-server2
      labels:
        app: kafka-server2
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: kafka-server2
          image: obsidiandynamics/kafka
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9093
              protocol: TCP
              name: kafka-port2
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-server2
  labels:
    app: kafka-server2
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: kafka-server2
  ports:
    - port: 9093
      protocol: TCP
      targetPort: kafka-port2
      name: kafka-port2-svc
  type: ClusterIP
