k8s/infrastructure/3-2-k8s-kafka-infra-schema-registy.yaml
# schema registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry-service
  labels:
    app: schema-registry-service
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: schema-registry-service
  template:
    metadata:
      name: schema-registry-service
      labels:
        app: schema-registry-service
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: schema-registry-service
          image: confluentinc/cp-schema-registry:5.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
              name: schema-port
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry-service
  labels:
    app: schema-registry-service
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: schema-registry-service
  ports:
    - port: 8081
      protocol: TCP
      targetPort: schema-port
      name: schema-port-svc
  type: ClusterIP
